<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/illustration"
            android:layout_width="0dp"
            android:layout_height="@dimen/illustration_height"
            android:layout_marginTop="@dimen/margin_m"
            android:contentDescription="@string/illustration"
            android:padding="@dimen/margin"
            android:scaleType="fitCenter"
            android:src="@drawable/illustration_security_on"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            style="?textAppearanceHeadline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin_m"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/fragment_email_verification_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/illustration"
            app:layout_constraintWidth_max="@dimen/max_width" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/subtitle"
            style="?textAppearanceBody2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin_xs"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/fragment_email_verification_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintWidth_max="@dimen/max_width" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_m"
            android:text="@string/fragment_email_verification_sign_in_txt"
            android:textAppearance="?textAppearanceCaption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_verification_email"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_verification_email"
            android:textAppearance="?textAppearanceCaption"
            android:textColor="?android:textColorTertiary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_out"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textAppearance="?textAppearanceCaption"
            android:textColor="?android:textColorTertiary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/send_verification_email" />

        <include
            layout="@layout/app_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_m"
            android:layout_marginBottom="@dimen/margin_m"
            app:layout_constraintBottom_toTopOf="@id/progress_indicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_out"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_indicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:hideAnimationBehavior="inward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:minHideDelay="@integer/progress_indicator_min_hide_delay"
            app:showAnimationBehavior="outward" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>